# jarvis

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.release.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  sidecar.rs  tray.rs
backend/: README.md  pyproject.toml  sidecar_entry.py
backend/jarvis_backend/: assets.py  cli.py  config.py  main.py
backend/jarvis_backend/agent/: loop.py  prompts.py  toolfilter.py
backend/jarvis_backend/audio/: capture.py  devices.py  playback.py
backend/jarvis_backend/doctor/: checks.py  latency.py
backend/jarvis_backend/llm/: base.py  capabilities.py  catalog.py  ollama.py  tiering.py
backend/jarvis_backend/security/: confirm.py  permissions.py  sandbox.py  ssrf.py  taint.py
backend/jarvis_backend/server/: app.py  auth.py  protocol.py  readiness.py  voice.py
backend/jarvis_backend/storage/: conversations.py  db.py  schema.sql
backend/jarvis_backend/stt/: endpointing.py  transcriber.py  vad.py
backend/jarvis_backend/tools/: __init__.py  filesystem.py  registry.py  shell.py  web.py
backend/tests/: conftest.py  test_agent_loop.py  test_auth.py  test_branching.py  test_capabilities.py  test_chunker.py  test_config.py  test_confirm.py  test_db.py  test_endpointing.py  test_ollama.py  test_readiness.py  test_sandbox.py  test_shell.py  test_ssrf.py  test_taint.py  test_tiering.py  test_tools.py  test_transcriber.py  test_voice_ws.py  test_wake.py  test_web.py  test_ws.py
(+53 files in other folders)
