[package]
name = "jarvis"
version = "0.1.0"
description = "JARVIS: local-first voice AI assistant"
edition = "2021"
rust-version = "1.77"

[lib]
name = "jarvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"

[profile.release]
strip = true
lto = true
